tests/run-pass/ice-700.rs
#![feature(plugin)]
#![plugin(clippy)]
#![deny(clippy)]

fn core() {}

fn main() {
    core();
}
